Updated health routes
